--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -44,8 +44,13 @@ jobs:
         with:
           python-version: '3.x'
 
+      - name: Set up Terraform
+        uses: hashicorp/setup-terraform@v3
+
       - name: Build Docusaurus Documentation
         run: |
+          terraform providers schema -json > schema.json
+          python3 gen_docs.py
           npx create-docusaurus@latest "terraform provider otc-marketplace | Documentation" classic --typescript
           rm -rf "terraform provider otc-marketplace | Documentation"/docs
           mv docs "terraform provider otc-marketplace | Documentation"
@@ -54,8 +59,6 @@ jobs:
           npm install
           npm install @docusaurus/plugin-client-redirects docusaurus-plugin-sass
           rm -rf src/pages/*
-          terraform providers schema -json > schema.json
-          python3 gen_docs.py
           npx docusaurus build
           mv build ../../public
 
