--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -34,6 +34,11 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v3
 
+      - name: Set Up Go
+        uses: actions/setup-go@v4
+        with:
+          go-version: '1.23.3'
+
       - name: Set up Node.js
         uses: actions/setup-node@v3
         with:
@@ -49,6 +54,7 @@ jobs:
 
       - name: Build Docusaurus Documentation
         run: |
+          go mod tidy && go install .
           terraform providers schema -json > schema.json
           python3 gen_docs.py
           npx create-docusaurus@latest "terraform provider otc-marketplace | Documentation" classic --typescript
