--- a/.github/workflows/document.yaml
+++ b/.github/workflows/document.yaml
@@ -4,6 +4,10 @@ on:
       - main
   workflow_dispatch:
 
+permissions:
+  id-token: write
+  contents: read
+
 jobs:
   deploy:
     runs-on: ubuntu-latest
