fix(ci): Actually deploy to Pages lol

--- a/.github/workflows/document.yaml
+++ b/.github/workflows/document.yaml
@@ -10,8 +10,10 @@ permissions:
 
 jobs:
   deploy:
+    environment:
+      name: github-pages
+      url: ${{ steps.deployment.outputs.page_url }}
     runs-on: ubuntu-latest
-
     steps:
       - name: Checkout repository
         uses: actions/checkout@v3
