--- a/.github/workflows/document.yaml
+++ b/.github/workflows/document.yaml
@@ -42,6 +42,10 @@ jobs:
           rm -rf src/pages/*
           npx docusaurus build
           mv build ../public
+
+      - name: (Debug) Look for symlinks and hard links
+        run: |
+          ls -l .automated-rendering/screenshot-capture/screenshots/
           find ../public -type l -print
           find ../public -xdev -type f -noleaf -links +1 -print
 
