fix(ci): Actually deploy to Pages lol

--- a/.github/workflows/document.yaml
+++ b/.github/workflows/document.yaml
@@ -45,8 +45,8 @@ jobs:
 
       - name: (Debug) Look for symlinks and hard links
         run: |
-          find ../public -type l -print
-          find ../public -xdev -type f -noleaf -links +1 -print
+          find public -type l -print
+          find public -xdev -type f -noleaf -links +1 -print
 
       - name: Upload Pages Artifact
         uses: actions/upload-pages-artifact@v3
