--- a/.github/workflows/document.yaml
+++ b/.github/workflows/document.yaml
@@ -57,7 +57,7 @@ jobs:
         id: deployment
         uses: actions/deploy-pages@v4
         with:
-          artifact_name: public
+          artifact_name: github-pages
           token: ${{ secrets.GITHUB_TOKEN }}
     outputs:
       page_url: ${{ steps.deployment.outputs.page_url }}
